--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 astroid==1.6.4
+autopep8==1.3.5
 certifi==2018.4.16
 chardet==3.0.4
 idna==2.6
@@ -8,6 +9,7 @@ mccabe==0.6.1
 numpy==1.14.3
 opencv-python==3.4.1.15
 Pillow==5.0.0
+pycodestyle==2.4.0
 pylint==1.9.1
 pytesseract==0.2.2
 requests==2.18.4
